--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div id="app">APP 2</div>
     <script type="module" src="/src/main.ts"></script>
 
+    <p>
+      Here we show both the popup and the optionts page embedded in iframes.
+      This makes developing these pages much much easier, as you no longer need
+      to take an action (clicking on the extension icon) to see the changes.
+    </p>
+
     <iframe src="src/popup/popup.html"></iframe>
     <iframe src="src/options/options.html"></iframe>
   </body>
