--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">APP 2</div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 
     <p>
@@ -15,8 +15,5 @@
       This makes developing these pages much much easier, as you no longer need
       to take an action (clicking on the extension icon) to see the changes.
     </p>
-
-    <iframe src="src/popup/popup.html"></iframe>
-    <iframe src="src/options/options.html"></iframe>
   </body>
 </html>
